--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div style="color: white;" class="container py-md-5 py-4">
             <div class="row align-items-center pt-4">
                 <div class="col-md-6 banner-left pe-xl-5">
-		    <h2 style="color: white;  text-align: justify;" class="mb-2 mt-2">Hi, I'm vansh lawa</h2>
+		    <h2 style="color: white;  text-align: justify;" class="mb-2 mt-2">Hi, I'm </h2>
                     <h3 style="color: white;  text-align: justify;" class="mb-3 mt-1"><!--Aspiring Software Developer-->Machine Learning Enthusiast</h3>
                     <h4 style="color: white;  text-align: justify;" class="banner-sub me-md-7">Discovering things about people through 
                     data is a really cool thing and excites me a lot, 
